--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "clipboard": "^2.0.11",
     "gsap": "^3.11.4",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "validator": "^13.9.0"
   }
 }
